--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
@@ -14,9 +14,13 @@
     <div class="region">
         <select id="district">
             <option selected value="0">Выбрать район</option>
-            @foreach (var district in Model.Districts)
+            @foreach (var district in Model.Districts.Where(x => x.ParrentId == null).OrderByDescending(x => x.Id))
             {
-                <option value="@district.Id">@district.RussianName</option>
+                <option disabled value="@district.Id">--@district.RussianName--</option>
+                foreach (var dis in Model.Districts.Where(x => x.ParrentId == district.Id))
+                {
+                    <option value="@dis.Id">@dis.RussianName</option>
+                }
             }
         </select>
     </div>
