--- a/ReHouse.FrontEnd/Views/News/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/News/Detail.cshtml
@@ -21,6 +21,10 @@
             {
                 <img src="@Url.Content(Model.Images[0].Url + Model.Images[0].FileName)" width="440" height="263">
             }
+            else
+            {
+                <img src="~/Content/images/news1.jpg" width="440" height="263">
+            }
         </div>
         <div class="content1">
             <p>@Model.Description</p>
