--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -73,6 +73,9 @@
     <div class="favorite">
         <a onclick="addtocart(@Model.Advert.Id, '@Model.Advert.Type', true, this);" id="favorite">Добавить в избранное</a>
     </div>
+    <div class="favorite1">
+        <a href="~/email/index" id="favorite">Подать заявку</a>
+    </div>
 </div>
 <div class="share_icons">
     <div class="share_fb">
