--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -45,6 +45,9 @@
     <div class="favorite">
         <a onclick="addtocart(@Model.NewBuilding.Id, '@AdvertsType.NewBuilding', true, this);" id="favorite">Добавить в избранное</a>
     </div>
+    <div class="favorite1">
+        <a href="~/email/index" id="favorite">Подать заявку</a>
+    </div>
 </div>
 <div class="share_icons">
     <div class="share_fb">
