--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -40,12 +40,11 @@
     }
     @Scripts.Render("~/bundles/jquery")
     @Styles.Render("~/Content/styleCss")
-    
+
     <!-- Alert при закрытии -->
     <!-- <script>
         $(window).on('beforeunload', function(){ return 'Вы уверены, что хотите покинуть страницу?сука'; });
     </script> -->
-
     <!-- TO TOP -->
     <script>
 
@@ -129,9 +128,9 @@
                         <a id="">Продажа</a>
                         <ol>
                             @*<li>@Html.ActionLink("Купить квартиру", "flat", "sale")</li>
-                            <li>@Html.ActionLink("Купить дом", "house", "sale")</li>
-                            <li>@Html.ActionLink("Купить участок", "homeStead", "sale")</li>
-                            <li>@Html.ActionLink("Купить коммерческую", "commerce", "sale")</li>*@
+                                <li>@Html.ActionLink("Купить дом", "house", "sale")</li>
+                                <li>@Html.ActionLink("Купить участок", "homeStead", "sale")</li>
+                                <li>@Html.ActionLink("Купить коммерческую", "commerce", "sale")</li>*@
                             <li><a href="~/sale/flat">Купить квартиру</a></li>
                             <li><a href="~/sale/house">Купить дом</a></li>
                             <li><a href="~/sale/homestead">Купить участок</a></li>
@@ -146,7 +145,7 @@
                             @*<li>@Html.ActionLink("Снять участок", "homeStead", "rent")</li>*@
                             <li><a href="~/rent/flat">Снять квартиру</a></li>
                             <li><a href="~/rent/house">Снять дом</a></li>
-                            <li><a href="~/rent/homestead">Снять участок</a></li>                            
+                            <li><a href="~/rent/homestead">Снять участок</a></li>
                         </ol>
                     </li>
                     <li><a href="~/newbuilding/">ЖК Новострои</a></li>
@@ -158,29 +157,9 @@
                             <li><a href="~/vacancy/">Вакансии агенства</a></li>
                         </ol>
                     </li>
-                    <li>
-                        @if (Session == null || Session["user"] == null)
-                        {
-                            <a class="f" data-dropdown="login-modal" aria-controls="login-modal" aria-expanded="false" href="/login">Войти</a>
-                                <div class="forms-wrapper">
-                                    <div class="form-drop f-dropdown content-mod medium" tabindex="-1" data-dropdown-content aria-hidden="true" id="login-modal">
-                                        <ol class="login">
-                                            <li>
-                                                <div class="login">
-                                                    <div class="bodyform">
-                                                        @Html.Partial("UnregisteredUsers/_loginPartial", new LoginModel())
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ol>
-                                    </div>
-                                </div>
-                        }
-                        else
-                        {
-                            @Html.ActionLink("Выйти", "logout", "authorize")
-                        }
-                    </li>
+
+
+
                 </ol>
             </div>
 
@@ -205,10 +184,32 @@
                 <a href="~/home/contacts" class="">Контакты</a>
                 <a href="~/map/index" class="">Карта сайта</a>
                 <a href="~/feedback/index" class="">Отзывы</a>
+                @if (Session == null || Session["user"] == null)
+                {
+                    <a class="f" data-dropdown="login-modal" data-options="align:top ignore_repositioning" aria-controls="login-modal" aria-expanded="false" href="/login">Войти</a>
+                        <div class="forms-wrapper">
+                            <div class="form-drop f-dropdown drop-top" tabindex="-1" data-dropdown-content aria-hidden="true" id="login-modal">
+                                <ol class="login">
+                                    <li>
+                                        <div class="login">
+                                            <div class="bodyform">
+                                                @Html.Partial("UnregisteredUsers/_loginPartial", new LoginModel())
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
+                }
+                else
+                {
+                    @Html.ActionLink("Выйти", "logout", "authorize")
+                }
+
             </div>
         </div>
     </div>
-    @RenderSection("scripts", required: false)    
+    @RenderSection("scripts", required: false)
     @Scripts.Render("~/bundles/addtocart")
     @Scripts.Render("~/bundles/lazyLoad")
     @Scripts.Render("~/bundles/unob")
@@ -249,6 +250,6 @@
                 window.open(url, '', 'toolbar=0,status=0,width=626,height=436');
             }
         }
-    </script>    
+    </script>
 </body>
 </html>
