--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Builder/_listOfBuilders.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Builder/_listOfBuilders.cshtml
@@ -16,7 +16,7 @@
             <td>@item.Url</td>
             <td>
                 <div class="edit_del">
-                    <form method="LINK" action="/cabinet/builder/edit/@item.Id">
+                    <form method="LINK" action="/cabinet/builders/edit/@item.Id">
                         <button>Редактировать</button>
                     </form>
                     <pre> </pre>
