--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Feedback/_listOfFeedbacks.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Feedback/_listOfFeedbacks.cshtml
@@ -18,7 +18,7 @@
             <td>@item.Description</td>
             <td>
                 <div class="edit_del">
-                    <form method="LINK" action="/cabinet/feedback/edit/@item.Id">
+                    <form method="LINK" action="/cabinet/feedbacks/edit/@item.Id">
                         <button>Редактировать</button>
                     </form>
                     <pre> </pre>
