--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Vacancy/_listOfVacancies.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Vacancy/_listOfVacancies.cshtml
@@ -17,7 +17,7 @@
             <td>@item.Date</td>
             <td>
                 <div class="edit_del">
-                    <form method="LINK" action="/cabinet/vacancy/edit/@item.Id">
+                    <form method="LINK" action="/cabinet/vacancies/edit/@item.Id">
                         <button>Редактировать</button>
                     </form>
                     <pre> </pre>
