--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -135,15 +135,15 @@
                                 <img src="~/Content/images/tel.png">
                             </div>
                             <div class="number">
-                                <p>+38063 000 0000</p>
-                                <p>+38063 000 0000</p>
+                                <p>+38093 057 7110</p>
+                                <p>+38048 788 6707</p>
                             </div>
                         </div>
                         <div class="social">
-                            <a href="#" class="fb"></a>
-                            <a href="#" class="yt"></a>
-                            <a href="#" class="gmail"></a>
-                            <a href="#" class="vk"></a>
+                            <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
+                            <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                            <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                            <a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>
                         </div>
                     </div>
 
@@ -233,10 +233,10 @@
         <div class="footer">
             <div id="toTop"></div>
             <div class="social">
-                <a href="#" class="fb"></a>
-                <a href="#" class="yt"></a>
-                <a href="#" class="gmail"></a>
-                <a href="#" class="vk"></a>
+                <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
+                <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                <a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>
             </div>
             <div class="bottomnav">
                 <a href="~/news/index" class="">Новости</a>
