--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Add.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Add.cshtml
@@ -303,6 +303,14 @@
                     <td>Название:</td>
                     <td>@Html.TextBoxFor(m => m.Name)</td>
                 </tr>
+                <tr>
+                    <td>Горячее:</td>
+                    <td>@Html.CheckBoxFor(m => m.IsHot)</td>
+                </tr>
+                <tr>
+                    <td>Эксклюзив:</td>
+                    <td>@Html.CheckBoxFor(m => m.IsExclusive)</td>
+                </tr>
                 @if (ViewBag.BuildersList != null && ViewBag.BuildersList.Count > 0)
                 {
                     <tr>
