--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
@@ -34,9 +34,9 @@
         });
     </script>
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDV3GzGjYIAyhiMq9Cof5SEZDuh0QeBD0Q&libraries=places&language=ru"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDV3GzGjYIAyhiMq9Cof5SEZDuh0QeBD0Q&libraries=places&language=ru"></script>
 
-<script>
+    <script>
 
 
 
@@ -247,7 +247,7 @@
         });
         google.maps.event.trigger($("#map")[0], 'resize');
 
-</script>
+    </script>
 }
 
 <div class="list_">
@@ -307,7 +307,7 @@
                 </tr>
                 <tr>
                     <td>Эксклюзив:</td>
-                    <td>@Html.CheckBox("exclusive")</td>
+                    <td>@Html.CheckBoxFor(m => m.IsExclusive)</td>
                 </tr>
                 @if (ViewBag.Categories != null && ViewBag.Categories.Count > 0)
                 {
@@ -425,7 +425,6 @@
         </div>
     </div>
 </div>
-
 
 
 
