--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -13,6 +13,7 @@
                     <h3>@item.Name</h3>
                 </div>
             </td>
+            <td>@(item.IsModerated ? "Одобрено" : "Неодобрено")</td>
             <td>@item.Adress</td>
             <td>@item.Price$</td>
             <td>
