--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Vacancies/List.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Vacancies/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ReHouse.Utils.Helpers
-@using ReHouse.Utils.DataBase.AdvertParams;
-@model List<Builder>
+@using ReHouse.Utils.DataBase.Vacancies;
+@model List<Vacancy>
 @{
     Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
 }
@@ -29,16 +29,16 @@
         <li><a class="3" href="~/cabinet/newbuilding/list">ЖК Новострои</a></li>
         <li><a class="3" href="~/cabinet/news/list">Новости</a></li>
         <li><a class="4" href="~/cabinet/feedbacks/list">Отзывы</a></li>
-        <li><a class="4" href="~/cabinet/vacancies/list">Вакансии</a></li>
-        <li><a class="preActive active" href="~/cabinet/builders/list">Застройщики</a></li>
+        <li><a class="preActive active" href="~/cabinet/vacancies/list">Вакансии</a></li>
+        <li><a class="4" href="~/cabinet/builders/list">Застройщики</a></li>
         <li><a class="4" href="~/cabinet/districts/list">Районы</a></li>
     </ul>
 </div>
 <div id="adminka2" class="tabset_content">
     <div class="headline">
-        <h2>Добавленные застройщики</h2>
-        <form method="LINK" action="/cabinet/builder/add">
-            <button>Добавить pfcnhjqobrf ►</button>
+        <h2>Добавленные вакансии</h2>
+        <form method="LINK" action="/cabinet/vacancies/add">
+            <button>Добавить вакансию ►</button>
         </form>
     </div>
 
@@ -48,34 +48,13 @@
         <div class="added">
             <button onclick="deleteChekedProducts();" class="delete_all">Удалить выбранные</button>
             <table class="added" id="data-container">
-                @Html.Partial("Builder/_listOfBuilders", Model)
+                @Html.Partial("Vacancy/_listOfVacancies", Model)
             </table>
-        </div>
-        <div>
-            <div class="products1">
-                <div id="button-more">
-                    <a id="more">Больше застройщиков</a>
-                </div>
-            </div>
-        </div>
-        <div id="loading-div">
-
-        </div>
+        </div>        
     }
 
 </div>
 @section scripts {
-    @Scripts.Render("~/bundles/deleteBuilders")
-
-    <script>
-        var url = "/cabinet/builders/load";
-        $('#button-more').click(function () {
-
-            var obj = {
-        }
-
-            lazyload(obj, url, false);
-        });       
-    </script>
+    @Scripts.Render("~/bundles/deleteVacancies")
 
 }
