--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -37,7 +37,7 @@
                 }
                 else if (i == Model.Prices.Count - 1)
                 {
-                    <option value="@Model.Prices[i].Id">выше @Model.Prices[i].Min грн</option>
+                    <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн</option>
                 }
                 else
                 {
