--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ReHouse.FrontEnd.Models
+@using ReHouse.Utils.Helpers
 @model LoadAdvertsModel
 
 <div class="selection-admin">
@@ -30,17 +31,35 @@
             <option selected value="0">Цена</option>
             @for (int i = 0; i < Model.Prices.Count; i++)
             {
-                if (i == 0)
+                if (ViewBag.Type == AdvertsType.Sale)
                 {
-                    <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
+                    if (i == 0)
+                    {
+                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
+                    }
+                    else if (i == Model.Prices.Count - 1)
+                    {
+                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
+                    }
+                    else
+                    {
+                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
+                    }
                 }
-                else if (i == Model.Prices.Count - 1)
+                else if (ViewBag.Type == AdvertsType.Rent)
                 {
-                    <option value="@Model.Prices[i].Id">выше @Model.Prices[i].Min $</option>
-                }
-                else
-                {
-                    <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
+                    if (i == 0)
+                    {
+                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
+                    }
+                    else if (i == Model.Prices.Count - 1)
+                    {
+                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн/мес</option>
+                    }
+                    else
+                    {
+                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
+                    }
                 }
             }
         </select>
@@ -58,12 +77,12 @@
             </select>
         </div>
     }
-    <div class="checkbox_">
+    @*<div class="checkbox_">
         <select id="isonlyuser">
             <option value="false">Все объявления</option>
             <option value="true">Мои объявления</option>
         </select>
-    </div>
+    </div>*@
 
     <div class="search-button-admin" id="search">
         <a>Поиск</a>
