--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -143,10 +143,7 @@
             <pre> </pre>
             <p class="grn">@ViewBag.EUR €</p>
             <pre></pre>
-            <p class="dot">·</p>
-            <pre> </pre>
         }
-        <p class="square_meter">@pricePerSquere</p>
     </div>
 
     <p>@Model.Advert.Description</p>
@@ -179,19 +176,21 @@
     </table>
 </div>
 
-<div class="planirovka">
-    @if (Model.Advert.PlanImages != null && Model.Advert.PlanImages.Count > 0)
-    {
-        foreach (var item in Model.Advert.PlanImages)
+@if (Model.Advert.PlanImages != null && Model.Advert.PlanImages.Count > 0)
+{
+    <div class="planirovka">
+        @foreach (var item in Model.Advert.PlanImages)
         {
             <a class="plan" rel="group" title="Планировка" href="@Url.Content(item.Url + item.FileName)"><img src="@Url.Content(item.Url + item.FileName)" border="0" /></a>
         }
-    }
-</div>
-<div class="video-youtube">
-    <iframe width="711" height="533" src="https://www.youtube.com/embed/@Model.Advert.YouTubeUrl" frameborder="0" allowfullscreen></iframe>
-</div>
-
+    </div>
+}
+@if (!String.IsNullOrEmpty(Model.Advert.YouTubeUrl))
+{
+    <div class="video-youtube">
+        <iframe width="711" height="533" src="https://www.youtube.com/embed/@Model.Advert.YouTubeUrl" frameborder="0" allowfullscreen></iframe>
+    </div>
+}
 <div class="map_managercard">
     <div id="mapapart_prod">
 
