--- a/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
@@ -33,17 +33,35 @@
             <option selected value="0">Цена</option>
             @for (int i = 0; i < Model.Prices.Count; i++)
             {
-                if (i == 0)
+                if (ViewBag.Type == AdvertsType.Sale)
                 {
+                    if (i == 0)
+                    {
                     <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                }
-                else if (i == Model.Prices.Count - 1)
-                {
-                    <option value="@Model.Prices[i].Id">выше @Model.Prices[i].Min $</option>
-                }
-                else
-                {
+                    }
+                    else if (i == Model.Prices.Count - 1)
+                    {
+                    <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
+                    }
+                    else
+                    {
                     <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
+                    }
+                }
+                else if (ViewBag.Type == AdvertsType.Rent)
+                {
+                    if (i == 0)
+                    {
+                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
+                    }
+                    else if (i == Model.Prices.Count - 1)
+                    {
+                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн/мес</option>
+                    }
+                    else
+                    {
+                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
+                    }
                 }
             }
         </select>
