--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -132,7 +132,7 @@
         {
             <p class="dot">·</p>
             <pre> </pre>
-            <p class="DolUSA">ViewBag.USD $/мес</p>
+            <p class="DolUSA">@ViewBag.USD $/мес</p>
             <pre></pre>
         }
         @if (ViewBag.EUR != 0)
