--- a/ReHouse.FrontEnd/Views/Shared/UnregisteredUsers/_loginPartial.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/UnregisteredUsers/_loginPartial.cshtml
@@ -33,9 +33,9 @@
                     <div class="buttonblock">
                         <input type="submit" class="button confirm-button" value="ВОЙТИ">
                     </div>
-                    <div class="forgotpas" id="forgotpas">
+                    @*<div class="forgotpas" id="forgotpas">
                         <p class="forgot"><a href="@Url.Action("RemindPassword", "Authorize")" class="#">Забыли пароль?</a></p>
-                    </div>
+                    </div>*@
 }
 
 
