--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Profile/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Profile/Edit.cshtml
@@ -44,97 +44,101 @@
 </div>
 <div id="adminka1" class="tabset_content tabset_content_active">
     <h2 class="tabset_label">adminka</h2>
-            
-        <div class="photo_of_manager">
-            <form enctype="multipart/form-data" action="" method="POST">
-                @Html.AntiForgeryToken()
-                @Html.HiddenFor(m => m.Id)
-                @Html.ValidationSummary()
-                <div class="contact_info">
-                    <table>
-                        <tr>
-                            <td>
-                                @if (Model.Avatar != null)
-                                {
-                                    <div class="photo_of_manager">
-                                        <img src="@Url.Content(Model.Avatar.Url + Model.Avatar.FileName)" width="150" height="150">
-                                        @*<a onclick="deleteAvatar(@Model.Avatar.Id)">X</a>*@
-                                    </div>
-                                }
-                            </td>
-                            <td><input type="file" name="image" /></td>
-                        </tr>
-                        <tr>
-                            <td>Имя:</td>
-                            <td>@Html.TextBoxFor(m => m.FirstName)</td>
-                        </tr>
-                        <tr>
-                            <td>Фамилия:</td>
-                            <td>@Html.TextBoxFor(m => m.SecondName)</td>
-                        </tr>
-                        <tr>
-                            <td>Отчество:</td>
-                            <td>@Html.TextBoxFor(m => m.FatherName)</td>
-                        </tr>
 
-                        <tr>
-                            <td>Email:</td>
-                            <td>@Html.TextBoxFor(m => m.Email)</td>
-                        </tr>
-                        <tr>
-                            <td>О себе:</td>
-                            <td>@Html.TextAreaFor(m => m.About, new { @rows = "4" })</td>
-                        </tr>
-                        <tr>
-                            <td>Адрес:</td>
-                            <td>@Html.TextBoxFor(m => m.Adress)</td>
-                        </tr>
-                        <tr>
-                            <td>Должность:</td>
-                            <td>@Html.TextBoxFor(m => m.Position)</td>
-                        </tr>
-                        @if (Model.Phones != null && Model.Phones.Count > 0)
-                        {
-                            for (var i = 0; i < Model.Phones.Count; i++)
+    <div class="photo_of_manager">
+        <form enctype="multipart/form-data" action="" method="POST">
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(m => m.Id)
+            @Html.ValidationSummary()
+            <div class="contact_info">
+                <table>
+                    <tr>
+                        <td>
+                            @if (Model.Avatar != null)
                             {
-                                <tr>
-                                    <td>Телефон:</td>
-                                    <td>
-                                        <input type="hidden" value="@Model.Phones[i].Id" name="Phones[@i].Id" />
-                                        <input type="text" value="@Model.Phones[i].TelePhone" name="Phones[@i].Telephone" />
-                                    </td>
-                                </tr>
+                                <div class="photo_of_manager">
+                                    <img src="@Url.Content(Model.Avatar.Url + Model.Avatar.FileName)" width="150" height="150">
+                                    @*<a onclick="deleteAvatar(@Model.Avatar.Id)">X</a>*@
+                                </div>
                             }
-                            <tr>
-                                <td>Телефон:</td>
-                                <td>
-                                    <input type="hidden" id="counter" name="counter" value="@(Model.Phones.Count+1)" />
-                                    <input type="text" name="Phones[@Model.Phones.Count].Telephone" />
-                                </td>
-                            </tr>
-                        }
-                        else
+                        </td>
+                        <td><input type="file" name="image" /></td>
+                    </tr>
+                    <tr>
+                        <td>Логин для входа:</td>
+                        <td>@Html.TextBoxFor(m => m.Login)</td>
+                    </tr>
+                    <tr>
+                        <td>Имя:</td>
+                        <td>@Html.TextBoxFor(m => m.FirstName)</td>
+                    </tr>
+                    <tr>
+                        <td>Фамилия:</td>
+                        <td>@Html.TextBoxFor(m => m.SecondName)</td>
+                    </tr>
+                    <tr>
+                        <td>Отчество:</td>
+                        <td>@Html.TextBoxFor(m => m.FatherName)</td>
+                    </tr>
+
+                    <tr>
+                        <td>Email:</td>
+                        <td>@Html.TextBoxFor(m => m.Email, new { disabled = "disabled" })</td>
+                    </tr>
+                    <tr>
+                        <td>О себе:</td>
+                        <td>@Html.TextAreaFor(m => m.About, new { @rows = "4" })</td>
+                    </tr>
+                    <tr>
+                        <td>Адрес:</td>
+                        <td>@Html.TextBoxFor(m => m.Adress)</td>
+                    </tr>
+                    <tr>
+                        <td>Должность:</td>
+                        <td>@Html.TextBoxFor(m => m.Position)</td>
+                    </tr>
+                    @if (Model.Phones != null && Model.Phones.Count > 0)
+                    {
+                        for (var i = 0; i < Model.Phones.Count; i++)
                         {
                             <tr>
                                 <td>Телефон:</td>
                                 <td>
-                                    <input type="hidden" id="counter" name="counter" value="1" />
-                                    <input type="text" name="Phones[0].Telephone" />
+                                    <input type="hidden" value="@Model.Phones[i].Id" name="Phones[@i].Id" />
+                                    <input type="text" value="@Model.Phones[i].TelePhone" name="Phones[@i].Telephone" />
                                 </td>
                             </tr>
                         }
-
-                        <tr id="phonebtn">
-                            <td></td>
-                            <td><a onclick="addPhone();">Добавить еще телефон</a></td>
-                        </tr>
-                        
                         <tr>
-                            <td></td>
-                            <td><button>Сохранить</button></td>
+                            <td>Телефон:</td>
+                            <td>
+                                <input type="hidden" id="counter" name="counter" value="@(Model.Phones.Count+1)" />
+                                <input type="text" name="Phones[@Model.Phones.Count].Telephone" />
+                            </td>
                         </tr>
-                    </table>
-                </div>
-            </form>
-        </div>
+                    }
+                    else
+                    {
+                        <tr>
+                            <td>Телефон:</td>
+                            <td>
+                                <input type="hidden" id="counter" name="counter" value="1" />
+                                <input type="text" name="Phones[0].Telephone" />
+                            </td>
+                        </tr>
+                    }
+
+                    <tr id="phonebtn">
+                        <td></td>
+                        <td><a onclick="addPhone();">Добавить еще телефон</a></td>
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td><button>Сохранить</button></td>
+                    </tr>
+                </table>
+            </div>
+        </form>
     </div>
+</div>
